syntax = "proto3";

package OpenNGS.ERPC;

// 请求协议头
message RequestProtocol {
  // 请求的调用类型
  // 比如: 普通调用，单向调用，流式调用
  // 具体值与IrpcCallType对应
  int32     call_type                   = 1;

  // 请求的超时时间，单位ms
  uint32    timeout                     = 2;

  // 请求唯一id
  uint64    request_id                  = 3;

  // 框架信息透传的消息类型
  // 比如调用链、染色key
  // 具体值与IrpcMessageType对应
  int32     message_type                = 4;

  // 请求数据的序列化类型
  // 比如: proto/json/fb, 默认proto
  // 具体值与IrpcContentEncodeType对应
  int32     content_type                = 5;

  // 主调服务的名称
  string    caller                      = 6;

  // 被调服务的路由名称
  // 规范格式，erpc.应用名.服务名.pb的service名[.接口名]
  // 接口可选
  string    callee                      = 7;

  // 调用服务的接口名
  // 规范格式: /package.Service名称/接口名
  string    func                        = 8;

  // 框架透传的信息key-value对，目前分两部分
  // 1是框架层要透传的信息，key的名字要以erpc_开头
  // 2是业务层要透传的信息，业务可以自行设置
  map<string, bytes> meta               = 9;
}

// 响应协议头
message ResponseProtocol {
  // 请求在框架层的错误返回码
  // 具体值与IrpcErrorCode对应
  int32     ret                         = 1;

  // 接口的错误返回码
  // 建议业务在使用时，标识成功和失败，0代表成功，其它代表失败
  int32     func_ret                    = 2;

  // 调用结果信息描述
  // 失败的时候用
  string    error_msg                    = 3;

  // 请求唯一id
  uint64    request_id                  = 4;

  // 框架信息透传的消息类型
  // 比如调用链、染色key、灰度、鉴权、多环境、set名称等的标识
  // 具体值与IrpcMessageType对应
  int32     message_type                = 5;

  // 响应数据的编码类型
  // 比如: proto/json/fb, 默认proto
  // 具体值与IrpcContentEncodeType对应
  int32     content_type                = 6;

  // 框架透传回来的信息key-value对，
  // 目前分两部分
  // 1是框架层透传回来的信息，key的名字要以erpc_开头
  // 2是业务层透传回来的信息，业务可以自行设置
  map<string, bytes> meta               = 7;
}
